--- a/main/templates/main/layout.html
+++ b/main/templates/main/layout.html
@@ -78,7 +78,7 @@
                         <li><a tabindex="-1" href="{% url 'main:about' %}#coworking">{% trans 'Coworking space' %}</a></li>
                    </ul>
                 </li>
-                <li class="{% active 'program' %}"><a href="{% url 'main:program_teams' %}">{% trans 'Pre-Incubator' %}</a></li>
+                <li class="{% active 'program' %}"><a href="{% url 'main:program_teams' %}">{% trans '<small>pre-</small>Incubator' %}</a></li>
                 <li class="{% active 'event' %}"><a href="{% url 'main:events' %}">{% trans 'Community' %}</a></li>
                 <li class="{% active 'blog' %}"><a href="{% url 'main:blog' %}">{% trans 'Blog' %}</a></li>
                 <li class="{% active 'contact' %}"><a href="{% url 'main:contact' %}">{% trans 'Contact' %}</a></li>
