--- a/main/static/main/css/style.css
+++ b/main/static/main/css/style.css
@@ -1082,13 +1082,18 @@ button.accordion.active:after {
   padding-left: 15px;
   padding-right: 10px;
   padding-bottom: 20px;
+  border-bottom: 1px solid #cacaca;
+}
+
+.program-sidebar-tabs-list > li {
+  border-bottom: 1px solid #cacaca;
 }
 
 .program-sidebar-tabs-list > li > a:hover,
 .program-sidebar-tabs-list > li > a:focus {
   background: #1c599b;
   color: #fff;
-  border-radius: 2px;
+  border-radius: 0px;
 }
 
 .program-sidebar-tabs-list > li.active > a:focus,
