--- a/main/templates/main/about.html
+++ b/main/templates/main/about.html
@@ -38,9 +38,23 @@
             </div>
             <div class="col-md-3">
                 <div class="about-sidebar">
-                    <h3>{% trans 'About' %}</h3>
+                    <h3>{% trans 'Official Docs<small> - GR</small>' %}</h3>
                     <div>
-                        {% trans 'about page sidebar' %}
+                      <div class="program-sidebar-regulation">
+                          <div class="separator"></div>
+                          <h4><a href="{% static '/main/files/kanonismos-leitourgias.pdf' %}">{% trans 'Concept' %}</a></h4>
+                          <div class="separator"></div>
+                      </div>
+                      <div class="program-sidebar-regulation">
+                          <div class="separator"></div>
+                          <h4><a href="{% static '/main/files/kanonismos-leitourgias.pdf' %}">{% trans 'Memorandum' %}</a></h4>
+                          <div class="separator"></div>
+                      </div>
+                      <div class="program-sidebar-regulation">
+                          <div class="separator"></div>
+                          <h4><a href="{% static '/main/files/kanonismos-leitourgias.pdf' %}">{% trans 'Regulation' %}</a></h4>
+                          <div class="separator"></div>
+                      </div>
                     </div>
                 </div>
             </div>
