--- a/main/templates/main/program-mentors.html
+++ b/main/templates/main/program-mentors.html
@@ -10,7 +10,7 @@
         <div class="row">
             <div class="col-md-9">
                 <div class="program-main">
-                    <h1 class="blue">{% trans 'Mentors' %}</h1>
+                    <h1 class="blue">{% trans 'The OK!Thess Team' %}</h1>
                     <div style="margin-bottom: 40px;"></div>
                     <div class="row">
                         {% for mentor in mentors_list %}
@@ -33,14 +33,17 @@
                 <div class="program-sidebar">
                     <div class="program-sidebar-tabs">
                         <ul class="nav nav-pills nav-stacked program-sidebar-tabs-list">
-                            <li class="program-sidebar-tabs-elem active"><a href="{% url 'main:program_mentors' %}">{% trans 'Mentors' %}</a></li>
+                            <li class="program-sidebar-tabs-elem active"><a href="{% url 'main:program_mentors' %}">{% trans 'Team' %}</a></li>
                              <div class="program-sidebar-box">
                               {% trans 'Experienced professionals who help to guide less experienced people. The mentors may be older or younger than the people that are being mentored, but they must have a certain area of expertise. Want to help our teams as a mentor? Drop us an email at <strong>dimitri@okthess.gr</strong>.' %}
                              </div>
                             <li class="program-sidebar-tabs-elem"><a href="{% url 'main:program_alumni' %}">{% trans 'Alumni' %}</a></li>
-                            <li class="program-sidebar-tabs-elem"><a href="{% url 'main:program_teams' %}">{% trans 'Teams' %}</a></li>
+                            <li class="program-sidebar-tabs-elem"><a href="{% url 'main:program_teams' %}">{% trans 'Selection' %}</a></li>
                         </ul>
                     </div>
+                    <div class="text-right">
+                     <a class="btn-red alt" href="/apply/" role="button">{% trans 'Apply now!' %}</a>
+                   </div>
                 </div>
             </div>
         </div>
