--- a/main/templates/main/events.html
+++ b/main/templates/main/events.html
@@ -39,7 +39,7 @@
                 {% endfor %}
             </div>
             <div class="col-md-3">
-                <h3 class="yellow">{% trans 'Hosted Meetups' %}</h3>
+                <h3 class="yellow">{% trans 'Meetups' %}</h3>
                 <div class="sidebar-module sidebar-module-inset sidebar-meetups">
                     <ul>
                         {% for meetup in meetups %}
