--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -60,8 +60,8 @@ Mix and Connect</strong> with like-minded peers.
     </div>
     <div class="container index-blog">
       <div class="text-center">
-        <a class="btn-blue btn-large" href="{% url 'main:blog' %}" role="button">
-            <span class="glyphicon glyphicon-search"></span>{% trans ' Read our <strong>Blog</strong>' %}
+        <a class="btn-black" href="{% url 'main:blog' %}" role="button">
+            <span class="glyphicon glyphicon-star"></span>{% trans 'Featured <strong>Posts</strong>' %}
         </a>
     </div>
         <div class="row">
@@ -84,7 +84,7 @@ Mix and Connect</strong> with like-minded peers.
     <div class="container index-events">
         <div class="row">
             <div class="col-md-8 col-md-offset-2">
-                <a class="btn-yellow btn-large" href="{% url 'main:events' %}" role="button">
+                <a class="btn-black" href="{% url 'main:events' %}" role="button">
                     <span class="glyphicon glyphicon-calendar"></span>{% trans 'Upcoming Community <strong>Meetups</strong>' %}
                 </a>
                 <div class="index-events-content">
