--- a/main/templates/main/blog.html
+++ b/main/templates/main/blog.html
@@ -9,7 +9,7 @@
     <div class="container blog">
         <div class="row">
             <div class="col-md-8">
-              <h1 class="blue">{% trans 'News' %}</h1>
+              <h1 class="blue">{% trans 'Latest News' %}</h1>
                 {% for post in posts_list %}
                     <div class="blog-post">
                         <div class="col-md-3">
