change read more cta

--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -75,7 +75,7 @@ Mix and Connect</strong> with like-minded peers.
                     </a>
                     <p class="index-blog-item-para">{{ post.teaser }}</p>
                     <a class="index-blog-item-btn" href="{% url 'main:blog_post' post.slug %}" role="button">
-                        <span class="glyphicon glyphicon-exclamation-sign"></span>{% trans '<strong>Read</strong> more »' %}
+                        <span class="glyphicon glyphicon-exclamation-sign"></span>{% trans '<strong>Read</strong> »' %}
                     </a>
                 </div>
             {% endfor %}
