--- a/main/templates/main/program-teams.html
+++ b/main/templates/main/program-teams.html
@@ -42,13 +42,13 @@
                 <div class="program-sidebar">
                   <div class="program-sidebar-tabs">
                         <ul class="nav nav-pills nav-stacked program-sidebar-tabs-list">
-                            <li class="program-sidebar-tabs-elem active"><a href="{% url 'main:program_teams' %}">{% trans 'Selection' %}</a></li>
+                            <li class="program-sidebar-tabs-elem active"><a href="{% url 'main:program_teams' %}">{% trans 'Selected Teams' %}</a></li>
                             <div class="program-sidebar-box">
                               {% blocktrans %}
                                Τeams are selected through an evaluation process that considers the business sustainability of the proposal they submit. Once selected, they are working with the OK!Thess team towards creating a scalable business model. Each pre-incubation cycle terminates with a DEMO DAY.
                               {% endblocktrans %}
                             </div>
-                            <li class="program-sidebar-tabs-elem"><a href="{% url 'main:program_mentors' %}">{% trans 'Team' %}</a></li>
+                            <li class="program-sidebar-tabs-elem"><a href="{% url 'main:program_mentors' %}">{% trans 'OK!Thess Team' %}</a></li>
                             <li class="program-sidebar-tabs-elem"><a href="{% url 'main:program_alumni' %}">{% trans 'Alumni' %}</a></li>
                         </ul>
                     </div>
