add partner link on program templates

--- a/main/templates/main/program-mentors.html
+++ b/main/templates/main/program-mentors.html
@@ -39,6 +39,7 @@
                              </div>
                             <li class="program-sidebar-tabs-elem"><a href="{% url 'main:program_alumni' %}">{% trans 'Alumni' %}</a></li>
                             <li class="program-sidebar-tabs-elem"><a href="{% url 'main:program_teams' %}">{% trans 'Selected Teams' %}</a></li>
+                            <li class="program-sidebar-tabs-elem"><a href="{% url 'main:program_partners' %}">{% trans 'Team & Partners' %}</a></li>
                         </ul>
                     </div>
                     <div class="text-right">
