--- a/main/templates/main/program-teams.html
+++ b/main/templates/main/program-teams.html
@@ -54,6 +54,7 @@
                             </div>
                             <li class="program-sidebar-tabs-elem"><a href="{% url 'main:program_mentors' %}">{% trans 'OK!Thess Team' %}</a></li>
                             <li class="program-sidebar-tabs-elem"><a href="{% url 'main:program_alumni' %}">{% trans 'Alumni' %}</a></li>
+                            <li class="program-sidebar-tabs-elem"><a href="{% url 'main:program_partners' %}">{% trans 'Team & Partners' %}</a></li>
                         </ul>
                     </div>
                     <div class="text-right">
