--- a/main/templates/main/program-alumni.html
+++ b/main/templates/main/program-alumni.html
@@ -39,6 +39,7 @@
                             </div>
                             <li class="program-sidebar-tabs-elem"><a href="{% url 'main:program_teams' %}">{% trans 'Selected Teams' %}</a></li>
                             <li class="program-sidebar-tabs-elem"><a href="{% url 'main:program_mentors' %}">{% trans 'OK!Thess Team' %}</a></li>
+                            <li class="program-sidebar-tabs-elem"><a href="{% url 'main:program_partners' %}">{% trans 'Team & Partners' %}</a></li>
                         </ul>
                     </div>
                     <div class="text-right">
