add sepve and kepa images footer

--- a/main/templates/main/layout.html
+++ b/main/templates/main/layout.html
@@ -141,6 +141,12 @@
                         <a href="http://www.seve.gr/" target="_blank">
                             <img src="{% static '/main/img/footer/seve.jpg' %}" alt="SEVE" class="footer-content-item-img">
                         </a>
+                        <a href="http://www.e-kepa.gr/" target="_blank">
+                            <img src="{% static '/main/img/footer/kepa.jpg' %}" alt="KEPA" class="footer-content-item-img">
+                        </a>
+                        <a href="http://www.sepve.org/" target="_blank">
+                            <img src="{% static '/main/img/footer/sepve.jpg' %}" alt="SEPVE" class="footer-content-item-img">
+                        </a>
                         </div>
                     <div class="col-md-4 col-sm-4">
                         <h5>{% trans 'SPONSORS' %}</h5><hr>
