add title field on partner

--- a/main/templates/main/program-partners.html
+++ b/main/templates/main/program-partners.html
@@ -22,6 +22,7 @@
                                     <div class="program-main-mentor-name">
                                         <a target="_blank" href="{{ partner.website }}">{{ partner.name }}</a>
                                     </div>
+                                    <div>{{ partner.title }}</div>
                                     <p>{{ partner.description }}</p>
                                 </div>
                             </div>
