fix program page sidebar

--- a/main/templates/main/program-alumni.html
+++ b/main/templates/main/program-alumni.html
@@ -38,8 +38,8 @@
                               {% endblocktrans %}
                             </div>
                             <li class="program-sidebar-tabs-elem"><a href="{% url 'main:program_teams' %}">{% trans 'Selected Teams' %}</a></li>
-                            <li class="program-sidebar-tabs-elem"><a href="{% url 'main:program_mentors' %}">{% trans 'OK!Thess Team' %}</a></li>
-                            <li class="program-sidebar-tabs-elem"><a href="{% url 'main:program_partners' %}">{% trans 'Team & Partners' %}</a></li>
+                            <!-- <li class="program-sidebar-tabs-elem"><a href="{% url 'main:program_mentors' %}">{% trans 'Mentors' %}</a></li> -->
+                            <li class="program-sidebar-tabs-elem"><a href="{% url 'main:program_partners' %}">{% trans 'Team &amp; Partners' %}</a></li>
                         </ul>
                     </div>
                     <div class="text-right">
