--- a/main/static/main/css/style.css
+++ b/main/static/main/css/style.css
@@ -66,6 +66,14 @@ h3.blue{
   background: #1c599b;
 }
 
+h4 {
+color: #fff;
+background: #231f20;
+padding: 10px 20px;
+display: inline-block;
+font-size: 16px;
+}
+
 address {
   margin-top: 57px;
 }
