--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -60,9 +60,7 @@ Mix and Connect</strong> with like-minded peers.
     </div>
     <div class="container index-blog">
       <div class="text-center">
-        <a class="btn-black" href="{% url 'main:blog' %}" role="button">
-            <span class="glyphicon glyphicon-star"></span>{% trans 'Featured <strong>Posts</strong>' %}
-        </a>
+        <h4><span class="glyphicon glyphicon-star"></span>{% trans 'Featured <strong>Posts</strong>' %}</h4>
     </div>
         <div class="row">
             {% for post in featured_posts_list %}
@@ -71,7 +69,7 @@ Mix and Connect</strong> with like-minded peers.
                         <div class="index-blog-item-img">
                             <img src="{{ post.image }}" alt="post image">
                         </div>
-                        <h4>{{ post.title }}</h4>
+                        <h3>{{ post.title }}</h3>
                         <p class="index-blog-item-para">{{ post.teaser }}</p>
                     </a>
                 </div>
@@ -81,9 +79,9 @@ Mix and Connect</strong> with like-minded peers.
     <div class="container index-events">
         <div class="row">
             <div class="col-md-8 col-md-offset-2">
-                <a class="btn-black" href="{% url 'main:events' %}" role="button">
+                <h4>
                     <span class="glyphicon glyphicon-calendar"></span>{% trans 'Upcoming Community <strong>Meetups</strong>' %}
-                </a>
+                </h4>
                 <div class="index-events-content">
                     {% for event in events_list %}
                         <a href="{{ event.link }}" class="index-events-content-single">
