--- a/main/templates/main/program-teams.html
+++ b/main/templates/main/program-teams.html
@@ -12,7 +12,7 @@
                 <div class="program-main">
                     <div class="row">
                         <div class="col-md-12">
-                            <h1 class="blue">{% trans 'Hosted Teams' %}</h1>
+                            <h1>{% trans 'Hosted Teams' %}</h1>
                             <div class="program-main-filter">
                                 <button class="btn-simple" id="industry-filter">
                                     {% trans 'Filter by industry' %}
