--- a/main/templates/main/events.html
+++ b/main/templates/main/events.html
@@ -9,7 +9,7 @@
     <div class="container-fluid events">
         <div class="row">
             <div class="col-md-9">
-              <h1 class="yellow">{% trans 'Events' %}</h1>
+              <h1>{% trans 'Events at OK!Thess' %}</h1>
                 {% for event in events_list %}
                     <div class="events-single {% if event.is_old %} events-single-dimmed {% endif %}">
                         <div class="row">
@@ -39,7 +39,10 @@
                 {% endfor %}
             </div>
             <div class="col-md-3">
-                <h3 class="yellow">{% trans 'Meetups' %}</h3>
+                <h3>{% trans 'Meetups' %}</h3>
+                <div class="program-sidebar-box">
+                    <p>{% trans 'Meetings, especially regular meetings of people who share a particular interest such as a programming language or entrepreneurship' %}</p>
+                </div>
                 <div class="sidebar-module sidebar-module-inset sidebar-meetups">
                     <ul>
                         {% for meetup in meetups %}
@@ -48,15 +51,12 @@
                     </ul>
                 </div>
                 <div class="program-sidebar-meetup">
-                        <h3 class="yellow">
-                            OK!Thess Meetup
-                            <i class="glyphicon glyphicon-circle-arrow-right"></i>
-                        </h3>
-                        <div class="program-sidebar-box">
-                            {% trans 'The meetup of OK!Thess is the new thing in town. Click here to learn more' %}
-                        </div>
+                  <h3 class="yellow">OK!Thess Meetup <i class="glyphicon glyphicon-circle-arrow-right"></i></h3>
+                  <div class="program-sidebar-box">
+                      {% trans 'The meetup of OK!Thess is the new thing in town. Click here to learn more' %}
+                  </div>
                 </div>
-                <h3 class="yellow">{% trans 'Past Events' %}</h3>
+                <h3>{% trans 'Past Events' %}</h3>
                 <div class="sidebar-module">
                     {% for year, year_obj in events_archive.items %}
                         <h5>{{ year }}</h5>
