change nav text - basic layout

--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -59,7 +59,7 @@ Mix and Connect</strong> with like-minded peers.
         </div>
     </div>
     <div class="index-blog-label">
-      <h4 class="blue"><span class="glyphicon glyphicon-star"></span>{% trans 'Featured <strong>Posts</strong>' %}</h4>
+      <h4><span class="glyphicon glyphicon-star"></span>{% trans 'Featured <strong>Posts</strong>' %}</h4>
     </div>
     <div class="container index-blog">
         <div class="row">
@@ -77,8 +77,8 @@ Mix and Connect</strong> with like-minded peers.
         </div>
     </div>
     <div class="index-events-label">
-      <h4 class="yellow"><span class="glyphicon glyphicon-calendar"></span>{% trans 'Upcoming Community <strong>Meetups</strong>' %}</h4>
-    </div> 
+      <h4><span class="glyphicon glyphicon-calendar"></span>{% trans 'Upcoming Community <strong>Meetups</strong>' %}</h4>
+    </div>
     <div class="container index-events">
         <div class="row">
             <div class="col-md-8 col-md-offset-2">
