--- a/main/templates/main/program-alumni.html
+++ b/main/templates/main/program-alumni.html
@@ -10,7 +10,7 @@
         <div class="row">
             <div class="col-sm-9">
                 <div class="program-main">
-                    <h1 class="blue">{% trans 'Graduated Teams' %}</h1>
+                    <h1>{% trans 'Graduated Teams' %}</h1>
                     <div style="margin-bottom: 40px;"></div>
                     <div class="row">
                         {% for team in teams_list %}
