--- a/main/templates/main/program-partners.html
+++ b/main/templates/main/program-partners.html
@@ -10,7 +10,7 @@
         <div class="row">
             <div class="col-md-9">
                 <div class="program-main">
-                    <h1 class="blue">{% trans 'OK!Thess Team &amp; Partners' %}</h1>
+                    <h1>{% trans 'OK!Thess Team &amp; Partners' %}</h1>
                     <div style="margin-bottom: 40px;"></div>
                     <div class="row">
                         {% for partner in partners_list %}
