--- a/main/templates/main/program-mentors.html
+++ b/main/templates/main/program-mentors.html
@@ -10,7 +10,7 @@
         <div class="row">
             <div class="col-md-9">
                 <div class="program-main">
-                    <h1 class="blue">{% trans 'Our Mentors' %}</h1>
+                    <h1>{% trans 'Our Mentors' %}</h1>
                     <div style="margin-bottom: 40px;"></div>
                     <div class="row">
                         {% for mentor in mentors_list %}
